fix: add child issue
